<resources>
    <string name="app_name">FoodRecipes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="preferences">preferences_app</string>
    <string name="preferences_recipeid">pref_recipe_id</string>

    <!-- NAME BUTTONS -->
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>

</resources>

