<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.MainActivity">
    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_base"
        android:name="com.tincio.foodrecipes.presentation.RecipeListFragment"
        android:tag="RecipeListFragment"
        tools:layout="@layout/fragment_list_recipe">
    </fragment>
</LinearLayout>
