<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/background_gridlayout"
    tools:context="com.tincio.foodrecipes.presentation.RecipeListFragment"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.RecyclerView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/recycler_recipe"
        tools:listitem="@layout/row_recycler_recipe"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbarSize="5dp">
    </android.support.v7.widget.RecyclerView>
</RelativeLayout>
